ImportCollection retry on bad metadata needs to roll back

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.5
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Engines - Server Integration
    • Fully Compatible
    • ALL
    • v8.0
    • Hoity-Toity - 2024-12-10
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When retrying importCollection calls due to bad WT metadata, we need to perform a rollback of the wuow since some calls may have succeeded.

            Assignee:
            Aaron Balsara
            Reporter:
            Aaron Balsara
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: