SERVER-97741 Rollback changes on importCollection retry (#29874)

Originally when retrying the importCollection call, the wuow was not
rolled back. In some cases this is fine, but in others WT can create
files that will always cause the retry to fail. We should rollback the
wuow before any retries.