src/mongo/db/modules/enterprise/src/live_import/import_collection.cpp
@@ -41,6 +41,7 @@ MONGO_FAIL_POINT_DEFINE(hangAfterImportDryRun);
 MONGO_FAIL_POINT_DEFINE(hangBeforeWaitingForImportDryRunVotes);
 MONGO_FAIL_POINT_DEFINE(noopImportCollectionCommand);
 MONGO_FAIL_POINT_DEFINE(abortImportAfterOpObserver);
+MONGO_FAIL_POINT_DEFINE(hangBeforeProductionImport);
 
 Status applyImportCollectionNoThrow(OperationContext* opCtx,
                                     const UUID& importUUID,
@@ -154,6 +155,165 @@ ServiceContext::ConstructorActionRegisterer registerApplyImportCollectionFn{
     "ApplyImportCollection", [](ServiceContext* serviceContext) {
         repl::registerApplyImportCollectionFn(applyImportCollection);
     }};
+
+Status doImportCollection(OperationContext* opCtx,
+                          const UUID& importUUID,
+                          const NamespaceString& nss,
+                          long long numRecords,
+                          long long dataSize,
+                          const BSONObj& catalogEntry,
+                          const BSONObj& storageMetadata,
+                          bool isDryRun,
+                          bool repair) {
+    WriteUnitOfWork wunit(opCtx);
+
+    AutoStatsTracker statsTracker(opCtx,
+                                  nss,
+                                  Top::LockType::NotLocked,
+                                  AutoStatsTracker::LogMode::kUpdateTopAndCurOp,
+                                  DatabaseProfileSettings::get(opCtx->getServiceContext())
+                                      .getDatabaseProfileLevel(nss.dbName()));
+
+    // If the collection creation rolls back, ensure that the Top entry created for the
+    // collection is deleted.
+    shard_role_details::getRecoveryUnit(opCtx)->onRollback(
+        [nss](OperationContext* opCtx) { Top::getDecoration(opCtx).collectionDropped(nss); });
+
+    // In order to make the storage timestamp for the collection import always correct even
+    // when other operations are present in the same storage transaction, we reserve an
+    // opTime before the collection import, then pass it to the opObserver. Reserving the
+    // optime automatically sets the storage timestamp for future writes.
+    OplogSlot importOplogSlot;
+    auto replCoord = repl::ReplicationCoordinator::get(opCtx);
+    if (opCtx->writesAreReplicated()) {
+        uassert(ErrorCodes::CommandNotSupported,
+                "Importing unreplicated collections is not supported",
+                !replCoord->isOplogDisabledFor(opCtx, nss));
+        importOplogSlot = repl::getNextOpTime(opCtx);
+    }
+
+    if (!isDryRun) {
+        audit::logImportCollection(&cc(), nss);
+    }
+
+    // Skip the actual import for the noopImportCollectionCommand fail point.
+    if (MONGO_unlikely(noopImportCollectionCommand.shouldFail())) {
+        return Status::OK();
+    }
+
+    // If this is from secondary application, we keep the collection UUID in the
+    // catalog entry. If this is a dryRun, we don't bother generating a new UUID (which
+    // requires correcting the catalog entry metadata). Otherwise, we generate a new
+    // collection UUID for the import as a primary.
+    ImportOptions::ImportCollectionUUIDOption uuidOption = importOplogSlot.isNull() || isDryRun
+        ? ImportOptions::ImportCollectionUUIDOption::kKeepOld
+        : ImportOptions::ImportCollectionUUIDOption::kGenerateNew;
+
+    uassert(ErrorCodes::NamespaceExists,
+            str::stream() << "Collection already exists. NS: " << nss.toStringForErrorMsg(),
+            !CollectionCatalog::get(opCtx)->lookupCollectionByNamespace(opCtx, nss));
+
+    // Create Collection object
+    auto storageEngine = opCtx->getServiceContext()->getStorageEngine();
+    auto durableCatalog = storageEngine->getCatalog();
+    auto opts = ImportOptions(uuidOption);
+    // Panic on dry run so it fails early, if it fails on the real thing we want to retry
+    // with repair
+    opts.panicOnCorruptWtMetadata = !isDryRun;
+    opts.repair = repair;
+
+    if (!isDryRun && hangBeforeProductionImport.shouldFail()) {
+        hangBeforeProductionImport.pauseWhileSet();
+    }
+
+    auto status = durableCatalog->importCollection(opCtx, nss, catalogEntry, storageMetadata, opts);
+    if (!status.isOK()) {
+        return status.getStatus();
+    }
+    auto importResult = std::move(status.getValue());
+
+    const auto catalogEntry2 = durableCatalog->getParsedCatalogEntry(opCtx, importResult.catalogId);
+    const auto md = catalogEntry2->metadata;
+    std::shared_ptr<Collection> ownedCollection = Collection::Factory::get(opCtx)->make(
+        opCtx, nss, importResult.catalogId, md, std::move(importResult.rs));
+
+    {
+        // Validate index spec.
+        StringMap<bool> seenIndex;
+        for (const auto& index : md->indexes) {
+            uassert(ErrorCodes::BadValue, "Cannot import non-ready indexes", index.ready);
+            auto swValidatedSpec = ownedCollection->getIndexCatalog()->prepareSpecForCreate(
+                opCtx, CollectionPtr(ownedCollection.get()), index.spec, boost::none);
+            if (!swValidatedSpec.isOK()) {
+                uasserted(ErrorCodes::BadValue, swValidatedSpec.getStatus().reason());
+            }
+            auto validatedSpec = swValidatedSpec.getValue();
+            uassert(ErrorCodes::BadValue,
+                    str::stream() << "Validated index spec " << validatedSpec
+                                  << " does not match original " << index.spec,
+                    index.spec.woCompare(validatedSpec,
+                                         /*ordering=*/BSONObj(),
+                                         BSONObj::ComparisonRules::kIgnoreFieldOrder) == 0);
+            uassert(ErrorCodes::BadValue,
+                    str::stream() << "Duplicate index name found in spec list: "
+                                  << md->toBSON()["indexes"],
+                    !seenIndex[index.nameStringData()]);
+            seenIndex[index.nameStringData()] = true;
+        }
+    }
+
+    ownedCollection->init(opCtx);
+
+    // Update the number of records and data size appropriately on commit.
+    shard_role_details::getRecoveryUnit(opCtx)->onCommit(
+        [numRecords,
+         dataSize,
+         rs = static_cast<WiredTigerRecordStore*>(ownedCollection->getRecordStore())](
+            OperationContext*, boost::optional<Timestamp>) {
+            rs->setNumRecords(numRecords);
+            rs->setDataSize(dataSize);
+        });
+
+    // don't std::move, we will need access to the records later for auditing
+    CollectionCatalog::get(opCtx)->onCreateCollection(opCtx, ownedCollection);
+
+    if (isDryRun) {
+        // Force a checkpoint to ensure rollback with remove_files=false doesn't hang on
+        // EBUSY (SERVER-95921)
+        opCtx->getServiceContext()->getStorageEngine()->checkpoint();
+        // This aborts the WUOW and rolls back the import.
+        return Status::OK();
+    }
+
+    // Fetch the catalog entry for the imported collection and log an oplog entry.
+    auto importedCatalogEntry =
+        storageEngine->getCatalog()->getCatalogEntry(opCtx, importResult.catalogId);
+    opCtx->getServiceContext()->getOpObserver()->onImportCollection(opCtx,
+                                                                    importUUID,
+                                                                    nss,
+                                                                    numRecords,
+                                                                    dataSize,
+                                                                    importedCatalogEntry,
+                                                                    storageMetadata,
+                                                                    /*dryRun=*/false);
+
+    if (audit::getGlobalAuditManager()->isEnabled() && nss.isPrivilegeCollection()) {
+        const auto cursor = ownedCollection->getCursor(opCtx);
+        while (const auto record = cursor->next()) {
+            audit::logInsertOperation(opCtx->getClient(), nss, record->data.toBson());
+        }
+    }
+
+    if (MONGO_unlikely(abortImportAfterOpObserver.shouldFail())) {
+        uasserted(ErrorCodes::OperationFailed, "Aborting import due to failpoint, no commit!");
+    }
+    wunit.commit();
+
+    if (numRecords > 0 && nss == NamespaceString::makeClusterParametersNSS(nss.tenantId())) {
+        cluster_parameters::initializeAllTenantParametersFromCollection(opCtx, *ownedCollection);
+    }
+    return Status::OK();
+}
 }  // namespace
 
 void importCollection(OperationContext* opCtx,
@@ -206,166 +366,29 @@ void importCollection(OperationContext* opCtx,
         uassert(ErrorCodes::NamespaceExists,
                 str::stream() << "A view already exists. NS: " << nss.toStringForErrorMsg(),
                 !catalog->lookupView(opCtx, nss));
-        {
-            WriteUnitOfWork wunit(opCtx);
-
-            AutoStatsTracker statsTracker(opCtx,
-                                          nss,
-                                          Top::LockType::NotLocked,
-                                          AutoStatsTracker::LogMode::kUpdateTopAndCurOp,
-                                          DatabaseProfileSettings::get(opCtx->getServiceContext())
-                                              .getDatabaseProfileLevel(nss.dbName()));
-
-            // If the collection creation rolls back, ensure that the Top entry created for the
-            // collection is deleted.
-            shard_role_details::getRecoveryUnit(opCtx)->onRollback([nss](OperationContext* opCtx) {
-                Top::getDecoration(opCtx).collectionDropped(nss);
-            });
-
-            // In order to make the storage timestamp for the collection import always correct even
-            // when other operations are present in the same storage transaction, we reserve an
-            // opTime before the collection import, then pass it to the opObserver. Reserving the
-            // optime automatically sets the storage timestamp for future writes.
-            OplogSlot importOplogSlot;
-            auto replCoord = repl::ReplicationCoordinator::get(opCtx);
-            if (opCtx->writesAreReplicated()) {
-                uassert(ErrorCodes::CommandNotSupported,
-                        "Importing unreplicated collections is not supported",
-                        !replCoord->isOplogDisabledFor(opCtx, nss));
-                importOplogSlot = repl::getNextOpTime(opCtx);
-            }
-
+        auto status = doImportCollection(opCtx,
+                                         importUUID,
+                                         nss,
+                                         numRecords,
+                                         dataSize,
+                                         catalogEntry,
+                                         storageMetadata,
+                                         isDryRun,
+                                         /* repair= */ false);
+        if (!status.isOK()) {
+            LOGV2_ERROR(9616600, "importCollection failed", "error"_attr = status.toString());
             if (!isDryRun) {
-                audit::logImportCollection(&cc(), nss);
+                status = doImportCollection(opCtx,
+                                            importUUID,
+                                            nss,
+                                            numRecords,
+                                            dataSize,
+                                            catalogEntry,
+                                            storageMetadata,
+                                            isDryRun,
+                                            /* repair= */ true);
             }
-
-            // Skip the actual import for the noopImportCollectionCommand fail point.
-            if (MONGO_unlikely(noopImportCollectionCommand.shouldFail())) {
-                return;
-            }
-
-            // If this is from secondary application, we keep the collection UUID in the
-            // catalog entry. If this is a dryRun, we don't bother generating a new UUID (which
-            // requires correcting the catalog entry metadata). Otherwise, we generate a new
-            // collection UUID for the import as a primary.
-            ImportOptions::ImportCollectionUUIDOption uuidOption =
-                importOplogSlot.isNull() || isDryRun
-                ? ImportOptions::ImportCollectionUUIDOption::kKeepOld
-                : ImportOptions::ImportCollectionUUIDOption::kGenerateNew;
-
-            uassert(ErrorCodes::NamespaceExists,
-                    str::stream() << "Collection already exists. NS: " << nss.toStringForErrorMsg(),
-                    !CollectionCatalog::get(opCtx)->lookupCollectionByNamespace(opCtx, nss));
-
-            // Create Collection object
-            auto storageEngine = opCtx->getServiceContext()->getStorageEngine();
-            auto durableCatalog = storageEngine->getCatalog();
-            auto opts = ImportOptions(uuidOption);
-            // Panic on dry run so it fails early, if it fails on the real thing we want to retry
-            // with repair
-            opts.panicOnCorruptWtMetadata = isDryRun;
-
-            auto status =
-                durableCatalog->importCollection(opCtx, nss, catalogEntry, storageMetadata, opts);
-            if (!status.isOK()) {
-                LOGV2_ERROR(9616600,
-                            "importCollection failed",
-                            "error"_attr = status.getStatus().toString());
-
-                if (!isDryRun) {
-                    opts.panicOnCorruptWtMetadata = true;
-                    opts.repair = true;
-                    status = durableCatalog->importCollection(
-                        opCtx, nss, catalogEntry, storageMetadata, opts);
-                }
-                uassertStatusOK(status.getStatus());
-            }
-            auto importResult = std::move(status.getValue());
-
-            const auto catalogEntry =
-                durableCatalog->getParsedCatalogEntry(opCtx, importResult.catalogId);
-            const auto md = catalogEntry->metadata;
-            std::shared_ptr<Collection> ownedCollection = Collection::Factory::get(opCtx)->make(
-                opCtx, nss, importResult.catalogId, md, std::move(importResult.rs));
-
-            {
-                // Validate index spec.
-                StringMap<bool> seenIndex;
-                for (const auto& index : md->indexes) {
-                    uassert(ErrorCodes::BadValue, "Cannot import non-ready indexes", index.ready);
-                    auto swValidatedSpec = ownedCollection->getIndexCatalog()->prepareSpecForCreate(
-                        opCtx, CollectionPtr(ownedCollection.get()), index.spec, boost::none);
-                    if (!swValidatedSpec.isOK()) {
-                        uasserted(ErrorCodes::BadValue, swValidatedSpec.getStatus().reason());
-                    }
-                    auto validatedSpec = swValidatedSpec.getValue();
-                    uassert(ErrorCodes::BadValue,
-                            str::stream() << "Validated index spec " << validatedSpec
-                                          << " does not match original " << index.spec,
-                            index.spec.woCompare(validatedSpec,
-                                                 /*ordering=*/BSONObj(),
-                                                 BSONObj::ComparisonRules::kIgnoreFieldOrder) == 0);
-                    uassert(ErrorCodes::BadValue,
-                            str::stream() << "Duplicate index name found in spec list: "
-                                          << md->toBSON()["indexes"],
-                            !seenIndex[index.nameStringData()]);
-                    seenIndex[index.nameStringData()] = true;
-                }
-            }
-
-            ownedCollection->init(opCtx);
-
-            // Update the number of records and data size appropriately on commit.
-            shard_role_details::getRecoveryUnit(opCtx)->onCommit(
-                [numRecords,
-                 dataSize,
-                 rs = static_cast<WiredTigerRecordStore*>(ownedCollection->getRecordStore())](
-                    OperationContext*, boost::optional<Timestamp>) {
-                    rs->setNumRecords(numRecords);
-                    rs->setDataSize(dataSize);
-                });
-
-            // don't std::move, we will need access to the records later for auditing
-            CollectionCatalog::get(opCtx)->onCreateCollection(opCtx, ownedCollection);
-
-            if (isDryRun) {
-                // Force a checkpoint to ensure rollback with remove_files=false doesn't hang on
-                // EBUSY (SERVER-95921)
-                opCtx->getServiceContext()->getStorageEngine()->checkpoint();
-                // This aborts the WUOW and rolls back the import.
-                return;
-            }
-
-            // Fetch the catalog entry for the imported collection and log an oplog entry.
-            auto importedCatalogEntry =
-                storageEngine->getCatalog()->getCatalogEntry(opCtx, importResult.catalogId);
-            opCtx->getServiceContext()->getOpObserver()->onImportCollection(opCtx,
-                                                                            importUUID,
-                                                                            nss,
-                                                                            numRecords,
-                                                                            dataSize,
-                                                                            importedCatalogEntry,
-                                                                            storageMetadata,
-                                                                            /*dryRun=*/false);
-
-            if (audit::getGlobalAuditManager()->isEnabled() && nss.isPrivilegeCollection()) {
-                const auto cursor = ownedCollection->getCursor(opCtx);
-                while (const auto record = cursor->next()) {
-                    audit::logInsertOperation(opCtx->getClient(), nss, record->data.toBson());
-                }
-            }
-
-            if (MONGO_unlikely(abortImportAfterOpObserver.shouldFail())) {
-                uasserted(ErrorCodes::OperationFailed,
-                          "Aborting import due to failpoint, no commit!");
-            }
-            wunit.commit();
-
-            if (numRecords > 0 &&
-                nss == NamespaceString::makeClusterParametersNSS(nss.tenantId())) {
-                cluster_parameters::initializeAllTenantParametersFromCollection(opCtx,
-                                                                                *ownedCollection);
-            }
+            uassertStatusOK(status);
         }
     });
 }
